# AI4Quant

./: README.md  run_pipeline.py
QuantFinance/: .env.template  .gitignore  README.md  pyproject.toml
QuantFinance/quantfin/: .env.template
QuantFinance/quantfin/backend/: main.py
QuantFinance/quantfin/backend/analysis/: __init__.py  finbert_analyzer.py  keyword_analyzer.py  llamaindex_engine.py
QuantFinance/quantfin/backend/config/: config.py
QuantFinance/quantfin/backend/models/: portfolio_model.py  risk_model.py  trading_model.py
QuantFinance/quantfin/backend/services/: backtesting_service.py  sentiment_service.py  simulation_service.py
QuantFinance/quantfin/backend/strategies/: portfolio_strategy_factory.py  risk_strategy_factory.py  trading_strategy_factory.py
QuantFinance/quantfin/backend/utils/: data_loader.py
QuantFinance/quantfin/frontend/: app.py
demos/pynecsript_strategy/: pynecsript_demo.py
llama_module/: README.md  llama_pipeline.py  utils.py
pynescript_strategy/: evaluate_strategy.py  strategy_runner.py
sentiment_demo/: README.md  example_sentiment.csv  plot_sentiment.py
shortmak-demo/: README.md  quantify_sim.py  shortmak_demo_runner.py  shortmask_demo.py  test_noise_robustness.py
utils/: config.py  metrics.py
