[project]
name = "quantfin"
version = "0.1.0"
description = "Quantitative Finance Application with Algorithmic Trading, Portfolio Management, and Risk Management"
authors = [
  { name="Henry Jiang", email="henryjiang18@gmail.com" },
]

#readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core Framework Dependencies
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.2",
    "pydantic[email]>=1.9.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=0.20.0",
    "async-lru>=2.0.4",
    "gradio>=3.40.0",
    "python-multipart>=0.0.5", # For file uploads
    "aiohttp>=3.8.0",          # For SEC EDGAR API integration
    "pip>=25.0.1",
    
    # Data Processing Dependencies
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
        
    # NEW: Algorithmic Trading Dependencies
    "backtrader>=1.9.78.123",      # For trading strategies (SMA, RSI, Bollinger Bands)
    
    # NEW: Portfolio Management Dependencies
    "pyportfolioopt>=1.5.5",       # FIXED: Correct package name for portfolio optimization
    "scikit-learn>=1.3.0",         # For advanced portfolio strategies
    
    # NEW: Risk Management Dependencies
    "empyrical>=0.5.5",            # For risk metrics (VaR, Expected Shortfall)
    
    # Data Provider Dependencies
    "yfinance>=0.2.36",            # For fetching financial data
    "scipy>=1.12.0",               # Required by pyportfolioopt for optimization
    
    # Utility Dependencies
    "loguru>=0.7.2",               # Enhanced logging

    # LlamaIndex Financial Analysis Dependencies
    "llama-index>=0.9.0",          # Core LlamaIndex for document processing
    "llama-index-llms-openai>=0.1.0",  # OpenAI LLM integration
    "llama-index-embeddings-openai>=0.1.0",  # OpenAI embeddings
    "llama-index-readers-web>=0.1.0",  # Web content readers
    "openai>=1.0.0",               # Core OpenAI client
    "beautifulsoup4>=4.10.0",      # For web scraping financial data
    "feedparser>=6.0.0",           # For parsing RSS feeds
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.270",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quantfin"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["nbs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
